# data-digger

./: .gitignore  Dockerfile_Scraper  README.md  queries.sql  renovate.json  roles.sql  run.sh  scraper.py
aact/: queries.sql
chembl/: Dockerfile_Backend  Dockerfile_DB  graphdb.py  llm_queries.sql  main.py  requirements.txt  roles.sql  run.sh  scraper.py
chembl/src/: chembl_query.py  chembl_similarity.py  graphdb.py  llm_queries.sql  main.py
clinical_trail/: .env.template  README.md  pyproject.toml
clinical_trail/app/: config.py  database_transfer.py  main.py  scraper.py
clinical_trail/app/database_transfer/: __init__.py  main.py  tbl_studies_info.py  utils.py
clinical_trail/app/vector_transfer/: __init__.py  clinicaltrailengine.py
clinical_trail/assets/: local_database_remove.sh  local_database_setup.sh  prod_setup.sql
clinical_trail/database_process/: queries.sql  run.sh
clinical_trail/queries/: ct_prod_setup.sql
clinical_trail/vectordb_process/: .env  README.md
clinical_trail/vectordb_process/vectordb_process/: clinicaltrailengine.py
clinical_trials/: .env.template  Dockerfile  Makefile  README.md  pyproject.toml
clinical_trials/app/: config.py  ingestion.py  main.py  scraper.py  settings.py
clinical_trials/app/database_transfer/: __init__.py  main.py  transfer.py  utils.py
clinical_trials/app/vector_transfer/: __init__.py  database_reader.py  transfer.py  vectors_upload.py
clinical_trials/app/vector_transfer/utils/: __init__.py  custom_basenode.py  custom_vectorstore.py  embeddings_utils.py  splade_embedding.py
clinical_trials/assets/: Dockerfile_DB  prod_setup.sql
clinical_trials/database_process/: Dockerfile_DB  queries.sql
clinical_trials/deployments/: data_ingestion_job.yaml  sync_db_dump_job.yaml
clinical_trials/sql/: table_creation.sql
clinical_trials/sync_db_dump/: Dockerfile  Makefile  README.md  queries.sql  sync_db_dump.sh
clinical_trials/vectordb_process/: pyproject.toml
clinical_trials/vectordb_process/vectordb_process/: cli.py
pubmed/: .env.template  .gitignore  Dockerfile  Dockerfile_Baseline  Makefile  README.md  baseline_init.sh  pom.xml  rankings.md  status.json
pubmed/corpora/: mesh-snippet.nt
pubmed/data-digger-etl/: README.md  pom.xml
pubmed/data-digger-etl/scripts/: citation_count.sql  create-ft-pubmed-tasks.sql  embeddings_server.py  fill-ft-pubmed-tasks.sql  load-pubmed.sh  prime-ft-pmc-download.sql
pubmed/data-mapper/: README.md  pom.xml
pubmed/deployments/: Dockerfile_Baseline  Dockerfile_Updates  Makefile  baseline_ecr.sh  baseline_job.yaml  create-pubmed-ingestion-job.sh  ingestion_job.yaml  pubmed-ingestion-2015-p75-c92-job.yaml  pubmed-ingestion-2016-p75-c92-job.yaml  pubmed-ingestion-2017-p75-c92-job.yaml  pubmed-ingestion-2018-p80-c92-job.yaml  pubmed-ingestion-2019-p80-c93-job.yaml  pubmed-ingestion-2020-p80-c93-job.yaml  pubmed-ingestion-2021-p80-c94-job.yaml  pubmed-ingestion-2022-p81-c94-job.yaml  pubmed-ingestion-2023-p85-c94-job.yaml  pubmed-ingestion-2023-p87-c97-job.yaml  pubmed-ingestion-2024-p95-c100-job.yaml  ranking_job.yaml  readme.md  update_fulltext_xml_job.yaml  updates_cronjob.yaml  updates_ecr.sh
pubmed/fulltext-pmc-xml/: Dockerfile  Makefile  README.md  update-fulltext-xmls.sh
pubmed/pubmed-ingestion/: Dockerfile  Makefile  README.md  pyproject.toml
pubmed/pubmed-ingestion/app/: main.py  settings.py
pubmed/pubmed-ingestion/app/database_vectordb_transform/: database_reader.py  database_to_vectors_engine.py  process_children_nodes.py  process_nodes.py  process_parent_nodes.py  treefy_nodes.py  vectors_upload.py
pubmed/pubmed-ingestion/app/notebooks/: pubmed_analysis.ipynb  pubmed_parent_yearwise_ingestion_log.csv  vector_update.py
pubmed/pubmed-ingestion/app/tests/: ingest-process.drawio  remote_locations.csv  retrieve_ft.sh  sparse_embeddings.py  testing-vectorization.md
pubmed/pubmed-ingestion/app/utils/: clustering.py  custom_basenode.py  custom_vectorstore.py  database_utils.py  embeddings_utils.py  sparse_utils.py  utils.py
pubmed/pubmed-ingestion/output_run_details/: 20240503-174721.json  20240503-183643.json
pubmed/pubmed_ingention/: .env  README.md  pyproject.toml
pubmed/pubmed_ingention/app/: main.py  settings.py
pubmed/pubmed_ingention/pubmed_ingention/: cli.py  database_vectordb_transform.py
pubmed/pubmed_ingestion/: README.md  pyproject.toml
pubmed/pubmed_ingestion/pubmed_ingestion/: cli.py  database_vectordb_transform.py
pubmed/ranking/: .env.template  Cargo.toml  Dockerfile  Makefile  README.md
pubmed/ranking/config/: default.toml  dev.toml
pubmed/ranking/notebooks/: citations.ipynb  pubmed_analysis.ipynb  pubmed_percentiles.csv
pubmed/ranking/sql/: drop_old_tables.sql  fill_new_tables.sql
pubmed/ranking/src/: credentials.rs  data_digger.rs  datadigger.rs  err.rs  lib.rs  main.rs  secrets.rs  settings.rs  startup.rs
(+156 files in other folders)
