[tool.poetry]
name = "pubmed-ingestion"
version = "0.1.0"
description = ""
authors = ["raahulmona <157174139+raahulmona@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
llama-index = "^0.10.20"
llama-index-embeddings-text-embeddings-inference = "^0.1.2"
llama-index-vector-stores-qdrant = "^0.1.4"
qdrant-client = "^1.8.0"
llama-index-readers-database = "^0.1.3"
tqdm = "^4.66.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
llama-index-llms-openai = "^0.1.15"
google = "^3.0.0"
boto3 = "^1.34.89"
pydantic-settings = "^2.2.1"
jupyterlab = "^4.1.7"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
torch = {version = "^2.3.0", platform = "linux"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-main = "app.main:entrypoint"