[tool.poetry]
name = "pubmed-ingestion"
version = "0.1.0"
description = ""
authors = ["raahulmona <157174139+raahulmona@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
llama-index = "^0.10.20"
llama-index-embeddings-text-embeddings-inference = "^0.1.2"
llama-index-vector-stores-qdrant = "^0.1.4"
qdrant-client = "^1.8.0"
llama-index-readers-database = "^0.1.3"
click = "^8.1.7"
tqdm = "^4.66.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-cli = "pubmed_ingestion.cli:transform_database_to_vectors"