[package]
name = "ranking"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ranking"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
config = { version = "0.14.0", features = ["toml"] }
once_cell = "1.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
color-eyre = "0.6.3"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
tokio-postgres = { version = "0.7.10" }
tokio-postgres-rustls = "0.12.0"
